--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,8 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "eslint": "^8.40.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
@@ -52,7 +54,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.8",
-    "typescript-eslint-parser": "^22.0.0"
+    "prettier": "^2.8.8"
   }
 }
