--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
@@ -22,6 +23,7 @@
     "lint:fix": "yarn eslint --ext .js,.jsx,.ts,.tsx --fix ./src"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.59.6",
     "eslint": "^8.40.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
@@ -30,7 +32,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.8",
-    "typescript-eslint-parser": "^22.0.0"
+    "prettier": "^2.8.8"
   }
 }
