--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon -L index.js",
     "lint": "eslint .",
-    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\""
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
+    "prepare": "cd .. && husky install server/.husky"
   },
   "license": "MIT",
   "dependencies": {
@@ -24,6 +25,7 @@
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "husky": "^8.0.3",
     "nodemon": "^2.0.22"
   }
 }
