update eslint rule to not catch unecessary import

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -13,7 +13,9 @@
   },
   "plugins": ["react", "prettier"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-uses-react": "off"
   },
   "settings": {
     "react": {
