--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -7,6 +7,8 @@
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": "error",
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-uses-react": "off",
     "node/no-unsupported-features/es-syntax": [
       "error",
       { "ignores": ["modules"] }
