enforce types for props

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -15,7 +15,8 @@
   "rules": {
     "prettier/prettier": "error",
     "react/react-in-jsx-scope": "off",
-    "react/jsx-uses-react": "off"
+    "react/jsx-uses-react": "off",
+    "react/prop-types": "error"
   },
   "settings": {
     "react": {
