--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -12,6 +12,7 @@
     "node/no-unsupported-features/es-syntax": [
       "error",
       { "ignores": ["modules"] }
-    ]
+    ],
+    "react/prop-types": "error"
   }
 }
