--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
     "prettier": "^2.8.8",
+    "prop-types": "^15.8.1",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
