--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon -L index.js",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
+    "format:check": "prettier --check \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
     "prepare": "cd .. && husky install server/.husky"
   },
   "dependencies": {
@@ -27,6 +28,11 @@
   },
   "devDependencies": {
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": "eslint --cache --fix",
+    "*.{js,jsx,json,yml,yaml,css,md}": "prettier --write"
   }
 }
