--- a/client/package.json
+++ b/client/package.json
@@ -51,7 +51,8 @@
   },
   "devDependencies": {
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.2"
+    "lint-staged": "^13.2.2",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix",
