Add eslint and prettier and format on commit with husky and lint-staged (#20)
* add and apply eslint and prettier to client

* add and apply eslint and prettier to server

* add Husky to Server

* add Husky to Client

* Add instructions in README

* typo

* update eslint rule to not catch unecessary import

* enforce types for props

* add prettier for tailwind and stage lint both client and server on commit

* update readme

* add prettiertailwind devdep

* Format in LF, fix prettier string

- Windows can only use the double quote

* undo readme changes

---------

Co-authored-by: dashdot <30674558+Graywing13@users.noreply.github.com>

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.8",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -20,7 +25,11 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint 'src/**/*.{js,jsx}'",
+    "format": "prettier --write \"src/**/*.{js,jsx,json,css}\"",
+    "format:check": "prettier --check 'src/**/*.{js,jsx,json,css}'",
+    "prepare": "cd .. && husky install client/.husky"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +48,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "prettier-plugin-tailwindcss": "^0.3.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": "eslint --cache --fix",
+    "*.{js,jsx,json,css}": "prettier --write"
   }
 }
