--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
