--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "add": "^2.0.6",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "^8.41.0",
@@ -22,6 +23,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
+    "mongoose": "^7.2.1",
     "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
     "yarn": "^1.22.19"
