--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,13 @@
   "name": "client",
   "version": "0.1.0",
   "license": "MIT",
-  "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
@@ -16,7 +17,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.0"
   },
@@ -26,16 +26,14 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint 'src/**/*.{js,jsx}'",
-    "format": "prettier --write \"src/**/*.{js,jsx,json,css}\"",
-    "format:check": "prettier --check 'src/**/*.{js,jsx,json,css}'",
-    "prepare": "cd .. && husky install client/.husky"
+    "lint": "eslint .",
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
+    "format:check": "prettier --check \"**/*.+(js|jsx|json|yml|yaml|css|md)\""
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "devDependencies": {
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   },
   "browserslist": {
     "production": [
@@ -49,13 +47,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
-    "prettier-plugin-tailwindcss": "^0.3.0"
-  },
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix",
-    "*.{js,jsx,json,css}": "prettier --write"
+    "*.{js,jsx,json,yml,yaml,css,md}": "prettier --write"
   }
 }
