--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,11 +1,3 @@
 {
-  "env": {
-    "commonjs": true,
-    "node": true
-  },
-  "extends": ["eslint:recommended", "plugin:node/recommended", "prettier"],
-  "plugins": ["prettier"],
-  "rules": {
-    "prettier/prettier": "error"
-  }
+  "extends": ["../.eslintrc.json", "plugin:node/recommended"]
 }
