--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,11 @@
     "dev": "nodemon -L index.js",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
-    "format:check": "prettier --check \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
-    "prepare": "cd .. && husky install server/.husky"
+    "format:check": "prettier --check \"**/*.+(js|jsx|json|yml|yaml|css|md)\""
   },
   "dependencies": {
-    "add": "^2.0.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "eslint": "^8.41.0",
     "eslint-config-node": "^4.1.0",
@@ -22,9 +21,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
-    "prettier": "^2.8.8",
-    "prop-types": "^15.8.1",
-    "yarn": "^1.22.19"
+    "prettier": "^2.8.8"
   },
   "devDependencies": {
     "husky": "^8.0.3",
