--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "eslint . && cd server && yarn lint && cd ../client && yarn lint",
     "format": "prettier --write . && cd server && yarn format && cd ../client && yarn format",
     "format:check": "prettier --check . && cd server && yarn format:check && cd ../client && yarn format:check",
-    "prepare": "cd client && yarn prepare"
+    "prepare": "husky install && npx husky add .husky/pre-commit \"npx lint-staged && cd client && npx lint-staged && cd ../server && npx lint-staged\""
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix",
