--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.0"
   },
@@ -27,6 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
+    "lint:fix": "eslint --cache --fix",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
     "format:check": "prettier --check \"**/*.+(js|jsx|json|yml|yaml|css|md)\""
   },
