--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "server"
   ],
   "scripts": {
-    "start-client": "cd client && yarn start",
-    "start-server": "cd server && yarn start",
+    "start:client": "cd client && yarn start",
+    "start:server": "cd server && yarn start",
     "start": "cd server && yarn start && cd ../client && yarn start",
-    "test-client": "cd client && yarn test",
-    "test-server": "cd server && yarn test",
+    "test:client": "cd client && yarn test",
+    "test:server": "cd server && yarn test",
     "test": "cd server && yarn test && cd ../client && yarn test",
     "lint": "eslint . && cd server && yarn lint && cd ../client && yarn lint",
+    "lint:fix": "eslint --cache --fix && cd server && yarn lint:fix && cd ../client && yarn lint:fix",
     "format": "prettier --write . && cd server && yarn format && cd ../client && yarn format",
     "format:check": "prettier --check . && cd server && yarn format:check && cd ../client && yarn format:check",
     "prepare": "husky install && npx husky add .husky/pre-commit \"npx lint-staged && cd client && npx lint-staged && cd ../server && npx lint-staged\""
