fix prepare script, change lint error to warn

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -11,7 +11,7 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/jsx-uses-react": "off",
-    "react/prop-types": "error"
+    "react/prop-types": "warn"
   },
   "settings": {
     "react": {
