--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,6 @@
   "extends": ["eslint:recommended", "prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "warn"
   }
 }
