change some lint rules for client

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -11,7 +11,9 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/jsx-uses-react": "off",
-    "react/prop-types": "warn"
+    "react/prop-types": ["error", {}],
+    "jsx-quotes": ["warn", "prefer-single"],
+    "no-unused-vars": "warn"
   },
   "settings": {
     "react": {
