--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.1",
     "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
     "yarn": "^1.22.19"
