use concurrently to yarn start both client and server

--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "format:check": "prettier --check \"**/*.+(js|jsx|json|yml|yaml|css|md)\""
   },
   "dependencies": {
+    "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
