--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start:client": "cd client && yarn start",
     "start:server": "cd server && yarn start",
-    "start": "cd server && yarn start && cd ../client && yarn start",
+    "start": "concurrently \"yarn workspace server start\" \"yarn workspace client start\"",
     "test:client": "cd client && yarn test",
     "test:server": "cd server && yarn test",
     "test": "cd server && yarn test && cd ../client && yarn test",
