--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,20 +1,14 @@
 {
-  "env": {
-    "browser": true,
-    "jest": true,
-    "node": true
-  },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
+  "extends": ["../.eslintrc.json", "plugin:react/recommended"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 12,
+    "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "prettier"],
+  "plugins": ["react"],
   "rules": {
-    "prettier/prettier": "warn",
     "react/react-in-jsx-scope": "off",
     "react/jsx-uses-react": "off",
     "react/prop-types": ["error", {}],
