--- a/package.json
+++ b/package.json
@@ -1,6 +1,27 @@
 {
-  "dependencies": {
-    "mongodb": "^5.5.0",
-    "mongoose": "^7.2.1"
+  "name": "travelers-tea",
+  "version": "0.1.0",
+  "license": "MIT",
+  "private": true,
+  "workspaces": [
+    "client",
+    "server"
+  ],
+  "scripts": {
+    "start:client": "cd client && yarn start",
+    "start:server": "cd server && yarn start",
+    "start": "concurrently \"yarn workspace server start\" \"yarn workspace client start\"",
+    "test:client": "cd client && yarn test",
+    "test:server": "cd server && yarn test",
+    "test": "cd server && yarn test && cd ../client && yarn test",
+    "lint": "eslint . && cd server && yarn lint && cd ../client && yarn lint",
+    "lint:fix": "eslint --cache --fix && cd server && yarn lint:fix && cd ../client && yarn lint:fix",
+    "format": "prettier --write . && cd server && yarn format && cd ../client && yarn format",
+    "format:check": "prettier --check . && cd server && yarn format:check && cd ../client && yarn format:check",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": "eslint --cache --fix",
+    "*.{js,jsx,json,yml,yaml,css,md}": "prettier --write"
   }
 }
