--- a/server/package.json
+++ b/server/package.json
@@ -8,14 +8,16 @@
     "start": "node index.js",
     "dev": "nodemon -L index.js",
     "lint": "eslint .",
+    "lint:fix": "eslint --cache --fix",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
-    "format:check": "prettier --check \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
-    "prepare": "cd .. && husky install server/.husky"
+    "format:check": "prettier --check \"**/*.+(js|jsx|json|yml|yaml|css|md)\""
   },
   "dependencies": {
+    "concurrently": "^8.0.1",
     "add": "^2.0.6",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "eslint": "^8.41.0",
     "eslint-config-node": "^4.1.0",
@@ -25,9 +27,7 @@
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.1",
-    "prettier": "^2.8.8",
-    "prop-types": "^15.8.1",
-    "yarn": "^1.22.19"
+    "prettier": "^2.8.8"
   },
   "devDependencies": {
     "husky": "^8.0.3",
