--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "dev": "nodemon -L index.js",
     "lint": "eslint .",
-    "lint:fix": "eslint --cache --fix",
+    "lint:fix": "eslint . --cache --fix",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
     "format:check": "prettier --check \"**/*.+(js|jsx|json|yml|yaml|css|md)\""
   },
@@ -34,7 +34,7 @@
     "nodemon": "^2.0.22"
   },
   "lint-staged": {
-    "*.{js,jsx}": "eslint --cache --fix",
+    "*.{js,jsx}": "eslint . --cache --fix",
     "*.{js,jsx,json,yml,yaml,css,md}": "prettier --write"
   }
 }
