--- a/.gitignore
+++ b/.gitignore
@@ -70,8 +70,8 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
-.env.test
+server/.env
+server/.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -82,7 +82,6 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
 
 # Serverless directories
 .serverless/
