--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-redux": "^8.0.5",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2",
