--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": ["../.eslintrc.json", "plugin:node/recommended"]
+  "extends": [
+    "../.eslintrc.json",
+    "plugin:node/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings"
+  ],
+  "plugins": ["import"],
+  "settings": {
+    "import/resolver": "node"
+  }
 }
