--- a/server/package.json
+++ b/server/package.json
@@ -18,19 +18,15 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
-    "eslint": "^8.41.0",
-    "eslint-config-node": "^4.1.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
-    "mongoose": "^7.2.1",
-    "prettier": "^2.8.8"
+    "mongoose": "^7.2.1"
   },
   "devDependencies": {
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
+    "eslint-config-node": "^4.1.0",
+    "eslint-import-resolver-node": "^0.3.7",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
     "nodemon": "^2.0.22"
   },
   "lint-staged": {
