--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-hook-form": "^7.44.3",
+    "react-map-gl": "^7.0.25",
     "react-redux": "^8.0.5",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2",
