--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@testing-library/user-event": "^13.2.1",
     "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
+    "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-hook-form": "^7.44.3",
+    "react-map-gl": "^7.0.25",
     "react-redux": "^8.0.5",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2",
