--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "dev": "nodemon -L index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --cache --fix",
@@ -20,7 +20,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
-    "mongoose": "^7.2.1"
+    "mongoose": "^7.2.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint-config-node": "^4.1.0",
