--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:client": "yarn workspace client start",
     "start:server": "yarn workspace server start",
     "start": "concurrently \"yarn workspace server start\" \"yarn workspace client start\"",
+    "dev": "concurrently \"yarn workspace server dev\" \"yarn workspace client dev\"",
     "test:client": "yarn workspace client test",
     "test:server": "yarn workspace server test",
     "test": "yarn workspace client test && yarn workspace server test",
