Create/Edit/GetAll/Delete endpoint for trips + thunks + minor changes to sidebar (#96)
* create/edit/getall api for trips and thunks

* temporary fix for teacups

* Delete endpoint for trips + changes to Sidebar and TripEntry + Dialog (#98)

* delete trip route, dialog, sidebar and tripentry changes

* refactor tripentry

* reuse modal, truncate only if icons are there

* add "dev" to script

* adjust icons spaces

* use response data and zoom after creating

* remove useeffect for mount in sidebar

* use env for api url

* update readme: client env

* change edit->update

* add title

Co-authored-by: Rithin Kumar <36722714+L0Lmaker@users.noreply.github.com>

* Format code

* restyle delete modal

---------

Co-authored-by: Rithin Kumar <36722714+L0Lmaker@users.noreply.github.com>
Co-authored-by: NLmeng <NLmeng@users.noreply.github.com>

--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
-    "mongoose": "^7.2.1"
+    "mongoose": "^7.2.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint-config-node": "^4.1.0",
