--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.44.3",
     "react-map-gl": "^7.0.25",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.0"
