--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.1",
+    "react-type-animation": "^3.1.0",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.0"
   },
