--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.1",
+    "morgan": "^1.10.0",
     "openai": "^3.2.1",
     "uuid": "^9.0.0"
   },
