--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.1",
+    "morgan": "^1.10.0",
     "openai": "^3.2.1",
     "uuid": "^9.0.0"
   },
