--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,17 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "chalk": "4.1.2",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.1",
+    "morgan": "^1.10.0",
     "openai": "^3.2.1",
     "uuid": "^9.0.0"
   },
