--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "start": "node index.js",
     "dev": "nodemon -L index.js",
     "reset:db": "node resetDB.js",
+    "coordinates:test": "node googleapi/getCoordinateTest.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --cache --fix",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
