--- a/client/.env.example
+++ b/client/.env.example
@@ -1,4 +1,4 @@
 REACT_APP_MAPBOX_TOKEN=
-REACT_APP_DEV_API_URL=
+REACT_APP_API_URL=
 REACT_APP_DEV_DISABLE_LOGIN=
-REACT_APP_DEV_ACCESS_TOKEN=
+REACT_APP_ACCESS_TOKEN=
