--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "cross-env": "^7.0.3",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-hook-form": "^7.44.3",
