script to clean trips and stages + minor adjustments to scripts

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test:server": "yarn workspace server test",
     "test": "yarn workspace client test && yarn workspace server test",
     "reset:db": "yarn workspace server reset:db",
+    "populate:db": "yarn workspace server populate:db",
+    "clean:db": "yarn workspace server clean:db",
     "lint": "eslint .",
     "lint:fix": "eslint . --cache --fix",
     "format": "prettier --write .",
