--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "clean:db": "node scripts/cleanDB.js",
     "reset:db": "node scripts/resetDB.js",
     "populate:db": "node scripts/populateDB.js",
+    "dupe:db": "node scripts/dupeDB.js",
     "coordinates:test": "node googleapi/getCoordinateTest.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --cache --fix",
