--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "chalk": "4.1.2",
+    "compromise": "^14.10.0",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
